--- a/words.whitehotrobot.com/public/index.html
+++ b/words.whitehotrobot.com/public/index.html
@@ -1,4 +1,3 @@
-<!--
 <?
   function alphaToDec($val){
     $pow=0;
@@ -15,15 +14,15 @@
 
   require('db.php');
   $query = explode('/',$_GET['i']);
-  $title = 'audiocloud';
+  $title = 'words';
   $image = 'https://lookie.jsbot.net/uploads/1pnBdc.png';
-  if($query[0] === 'track'){
+  if($query[0] === 'post'){
     $id = alphaToDec(mysqli_real_escape_string($link, $query[1]));
-    $sql = 'SELECT * FROM audiocloudTracks WHERE id = ' . $id;
+    $sql = 'SELECT * FROM words WHERE id = ' . $id;
     $res = mysqli_query($link, $sql);
     if(mysqli_num_rows($res)){
       $row = mysqli_fetch_assoc($res);
-      $title = $row['author'] . ' - ' . $row['trackName'];
+      $title = $row['author'] . ' - ' . $row['title'];
       $sql = 'SELECT name, avatar FROM users WHERE name LIKE "' . $row['author'] . '"';
       $res = mysqli_query($link, $sql);
       if(mysqli_num_rows($res)){
@@ -36,7 +35,7 @@
     $res = mysqli_query($link, $sql);
     if(mysqli_num_rows($res)){
       $row = mysqli_fetch_assoc($res);
-      if($row['name']) $title = 'audiocloud - ' . $row['name'];
+      if($row['name']) $title = 'words - ' . $row['name'];
       if($row['avatar']) $image = $row['avatar'];
     }
   } else {
@@ -45,9 +44,8 @@
   $url =  (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https:" : "http:") . "//{$_SERVER['HTTP_HOST']}{$_SERVER['REQUEST_URI']}";
   $url = htmlspecialchars( $url, ENT_QUOTES, 'UTF-8' );
   $type = 'website';
-  $description = 'audiocloud - a free platform for musicians';
+  $description = 'words.whitehotrobot.com - a free blog';
 ?>
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
