--- a/code.whitehotrobot.com/public/index.html
+++ b/code.whitehotrobot.com/public/index.html
@@ -46,7 +46,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=1024">
     <title><?=$title?></title>
     <? if($image){?>
       <link rel="icon" href="<?='https://code.whitehotrobot.com/imgProxy.php?url='.$image?>"
