major beta stopping point @ messaging.whitehotrobot.com

--- a/code.whitehotrobot.com/public/index.html
+++ b/code.whitehotrobot.com/public/index.html
@@ -48,6 +48,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1024">
     <title><?=$title?></title>
+    <meta name="description" content="<?=$description?>">
+    <meta name="keywords" content="<?$title . ' ' . $description?>">
     <? if($image){?>
       <link rel="icon" href="<?='https://code.whitehotrobot.com/imgProxy.php?url='.$image?>"
     ><?}else{?>
