--- a/audiocloud.whitehotrobot.com/public/index.html
+++ b/audiocloud.whitehotrobot.com/public/index.html
@@ -54,6 +54,8 @@
     <meta name="viewport" content="width=800">
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
     <title><?=$title?></title>
+    <meta name="description" content="<?=$description?>">
+    <meta name="keywords" content="<?$title . ' ' . $description?>">
     <? if($image){?>
       <link rel="icon" href="<?='https://code.whitehotrobot.com/imgProxy.php?url='.$image?>"
     ><?}else{?>
