--- a/games.whitehotrobot.com/public/games/sudoku/index.html
+++ b/games.whitehotrobot.com/public/games/sudoku/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="https://lookie.jsbot.net/uploads/1GY3GM.png">
+    <link rel="icon" href="https://jsbot.cantelope.org/uploads/1GY3GM.png">
     <meta name="viewport" content="width=device-width,initial-scale=0.5">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
