--- a/mail.whitehotrobot.com/skins/robot/watermark.html
+++ b/mail.whitehotrobot.com/skins/robot/watermark.html
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-	background: url(https://lookie.jsbot.net/uploads/2awMlZ.png) center no-repeat #0000;
+	background: url(https://jsbot.cantelope.org/uploads/2awMlZ.png) center no-repeat #0000;
   opacity: .2
 }
 
