--- a/audiocloud.whitehotrobot.com/public/index.html
+++ b/audiocloud.whitehotrobot.com/public/index.html
@@ -15,7 +15,7 @@
   require('db.php');
   $query = explode('/',$_GET['i']);
   $title = 'audiocloud';
-  $image = 'https://lookie.jsbot.net/uploads/1pnBdc.png';
+  $image = 'https://jsbot.cantelope.org/uploads/1pnBdc.png';
   if($query[0] === 'track'){
     $id = alphaToDec(mysqli_real_escape_string($link, $query[1]));
     $sql = 'SELECT * FROM audiocloudTracks WHERE id = ' . $id;
@@ -39,7 +39,7 @@
       if($row['avatar']) $image = $row['avatar'];
     }
   } else {
-    $image = 'https://lookie.jsbot.net/uploads/1GY3GM.png';
+    $image = 'https://jsbot.cantelope.org/uploads/1GY3GM.png';
   }
   $url =  (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https:" : "http:") . "//{$_SERVER['HTTP_HOST']}{$_SERVER['REQUEST_URI']}";
   $url = htmlspecialchars( $url, ENT_QUOTES, 'UTF-8' );
@@ -59,7 +59,7 @@
     <? if($image){?>
       <link rel="icon" href="<?='https://code.whitehotrobot.com/imgProxy.php?url='.$image?>"
     ><?}else{?>
-      <link rel="icon" href="https://lookie.jsbot.net/uploads/1GY3GM.png">
+      <link rel="icon" href="https://jsbot.cantelope.org/uploads/1GY3GM.png">
     <?}?>
     <? if($image){?><meta property="og:url" content="<?=$url?>"/><?}?>
     <? if($image){?><meta property="og:type" content="<?=$type?>"/><?}?>
