--- a/console.whitehotrobot.com/public/index.html
+++ b/console.whitehotrobot.com/public/index.html
@@ -34,7 +34,7 @@
       $image = $row['avatar'];
     }
   } else {
-    $image = 'https://lookie.jsbot.net/uploads/1HVS37.png';
+    $image = 'https://jsbot.cantelope.org/uploads/1HVS37.png';
   }
   $url =  (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https:" : "http:") . "//{$_SERVER['HTTP_HOST']}{$_SERVER['REQUEST_URI']}";
   $url = htmlspecialchars( $url, ENT_QUOTES, 'UTF-8' );
@@ -51,7 +51,7 @@
     <? if($image){?>
       <link rel="icon" href="<?='https://console.whitehotrobot.com/imgProxy.php?url='.$image?>"
     ><?}else{?>
-      <link rel="icon" href="https://lookie.jsbot.net/uploads/1HVS37.png">
+      <link rel="icon" href="https://jsbot.cantelope.org/uploads/1HVS37.png">
     <?}?>
     <? if($image){?><meta property="og:url" content="<?=$url?>"/><?}?>
     <? if($image){?><meta property="og:type" content="<?=$type?>"/><?}?>
