--- a/tetris_multiplayer/public/index.html
+++ b/tetris_multiplayer/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="https://lookie.jsbot.net/uploads/1XXD2f.png">
+    <link rel="icon" href="https://jsbot.cantelope.org/uploads/1XXD2f.png">
     <title>TETRIS - The Next Generation</title>
   </head>
   <body>
