--- a/whitehotrobot.com/public/index.html
+++ b/whitehotrobot.com/public/index.html
@@ -42,7 +42,7 @@
       }
     }
   } else {
-    $image = 'https://lookie.jsbot.net/uploads/1HVS37.png';
+    $image = 'https://jsbot.cantelope.org/uploads/1HVS37.png';
   }
   $url =  (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https:" : "http:") . "//{$_SERVER['HTTP_HOST']}{$_SERVER['REQUEST_URI']}";
   $url = htmlspecialchars( $url, ENT_QUOTES, 'UTF-8' );
@@ -60,7 +60,7 @@
     <? if($image){?>
       <link rel="icon" href="<?='https://code.whitehotrobot.com/imgProxy.php?url='.$image?>"
     ><?}else{?>
-      <link rel="icon" href="https://lookie.jsbot.net/uploads/1HVS37.png">
+      <link rel="icon" href="https://jsbot.cantelope.org/uploads/1HVS37.png">
     <?}?>
     <? if($image){?><meta property="og:url" content="<?=$url?>"/><?}?>
     <? if($image){?><meta property="og:type" content="<?=$type?>"/><?}?>
@@ -69,11 +69,11 @@
     <? if($image){?><meta property="og:image" content="<?=$image?>"/><?}?>
     <? if($image){?><meta property="og:image:secure_url" content="<?='https://whitehotrobot.com/imgProxy.php?url='.$image?>"/><?}?>
     <!--
-    <link rel="icon" href="https://lookie.jsbot.net/uploads/tBgps.png">
+    <link rel="icon" href="https://jsbot.cantelope.org/uploads/tBgps.png">
     <meta property="og:url" content="https://whitehotrobot.com"/>
     <meta property="og:title" content="Whitehot Robot"/>
     <meta property="og:description" content="Whitehot Robot - Current Works"/>
-    <meta property="og:image" content="https://lookie.jsbot.net/uploads/24Zxb0.jpg"/>
+    <meta property="og:image" content="https://jsbot.cantelope.org/uploads/24Zxb0.jpg"/>
     <title>Whitehot Robot - Jukebox</title>
     -->
   </head>
